# PROSE-GPU_TAG_Detection

./: .gitignore  calibrate_images.py  calibration_data.npz  get_calibration.py  my_funcs.py  view_camera_checkerboard_dist.py
calib/: calibration_data.npz  requirements.txt  test.py
cpp_ROI/: CMakeLists.txt
cpp_ROI/src/: main.cpp
dataset/: convert_svg_to_png.py
gpu_cpu_tag_detection/: cuda_tag.cu  tag.cpp
gpu_cpu_tag_detection/try_git_method/: test_main  test_main.cpp
gpu_cpu_tag_detection/try_git_method/lib/: ArucoDetector.cpp
indoor_detection/src/: preprocess.py  train.py
tensor_flow_tag_detection/: get_calibration.py  my_funcs.py
tensor_flow_tag_detection/indoor_detection/src/: detect.py
